fix: change balance endpoint to POST from GET
GET requests do not support body payloads
